--- a/customers.html
+++ b/customers.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Customer Success • Contoso Coffee</title>
   <meta name="description" content="Contoso Coffee — commercial and consumer coffee solutions"/>
-  <link rel="icon" href="assets/img/favicon.svg" type="image/svg+xml"/>
+  <link rel="icon" href="assets/img/logo.jpg" type="image/jpeg"/>
   <style>
 :root{
   --bg:#0f0a08;
@@ -24,7 +24,7 @@ a:hover{text-decoration:underline}
 .nav{position:sticky;top:0;z-index:30;background:rgba(15,10,8,.75);backdrop-filter:blur(10px);border-bottom:1px solid var(--line)}
 .nav .row{display:flex;gap:16px;align-items:center;justify-content:space-between;padding:12px 0}
 .brand{display:flex;gap:10px;align-items:center}
-.brand img{height:40px}
+.brand img{height:50px;width:auto}
 .menu{display:flex;gap:14px}
 .menu a{padding:8px 12px;border-radius:10px}
 .menu a.active,.menu a:hover{background:rgba(255,255,255,.06)}
@@ -74,7 +74,7 @@ button.cta{cursor:pointer}
 <div class="nav">
   <div class="container row">
     <a class="brand" href="index.html" aria-label="Contoso Coffee Home">
-      <img src="assets/img/logo.jpg" alt="Contoso Coffee logo" style="height:40px"/><strong>Contoso Coffee</strong>
+      <img src="assets/img/logo.jpg" alt="Contoso Coffee" style="height:50px;width:auto"/>
     </a>
     <nav class="menu"><a href="index.html" class="">Home</a><a href="products.html" class="">Products</a><a href="customers.html" class="active">Customer Success</a><a href="contact.html" class="">Contact</a></nav>
   </div>
