--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,18 @@ button.cta{cursor:pointer}
 
   <div class="form-card">
     <div class="pad">
-      <div class="badge" style="margin:4px 0 12px 0">Submits to Power Automate → Dataverse Lead</div>
+      <div class="demo-info" style="background:rgba(192,138,89,.12);border:1px solid rgba(192,138,89,.35);border-radius:12px;padding:16px 18px;margin-bottom:20px">
+        <div style="display:flex;gap:12px;align-items:flex-start">
+          <div style="font-size:24px;line-height:1">💡</div>
+          <div>
+            <div style="font-weight:700;font-size:15px;margin-bottom:6px;color:var(--text)">Demo Tip</div>
+            <div style="font-size:14px;line-height:1.6;color:var(--muted)">
+              Use your <strong style="color:var(--text)">real name and email address</strong> for the best demo experience.<br/>
+              For the company field, try: <strong style="color:var(--brand)">Blue Bottle Coffee</strong>, <strong style="color:var(--brand)">Stumptown Coffee Roasters</strong>, or <strong style="color:var(--brand)">Intelligentsia Coffee</strong>
+            </div>
+          </div>
+        </div>
+      </div>
       <form id="contactForm" onsubmit="event.preventDefault(); handleSubmit();">
         <div class="form-grid">
           <div class="field">
@@ -113,7 +124,7 @@ button.cta{cursor:pointer}
           </div>
           <div class="field">
             <label for="company">Company</label>
-            <input id="company" name="company" type="text" placeholder="Company name" required/>
+            <input id="company" name="company" type="text" placeholder="e.g., Blue Bottle Coffee" required/>
           </div>
           <div class="field">
             <label for="email">Email</label>
