Update demo company names in contact.html

--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@ button.cta{cursor:pointer}
             <div style="font-weight:700;font-size:15px;margin-bottom:6px;color:var(--text)">Demo Tip</div>
             <div style="font-size:14px;line-height:1.6;color:var(--muted)">
               Use your <strong style="color:var(--text)">real name and email address</strong> for the best demo experience.<br/>
-              For the company field, try: <strong style="color:var(--brand)">Blue Bottle Coffee</strong>, <strong style="color:var(--brand)">Stumptown Coffee Roasters</strong>, or <strong style="color:var(--brand)">Intelligentsia Coffee</strong>
+              For the company field, try: <strong style="color:var(--brand)">Dutch Brothers</strong>, <strong style="color:var(--brand)">Blue Bottle Coffee</strong>, or <strong style="color:var(--brand)">Starbucks</strong>.
             </div>
           </div>
         </div>
